// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sso reducer should handle the CLEAR_CREDENTIAL_REQUEST action  1`] = `
Object {
  "activeAuthenticationRequest": Object {
    "callbackURL": "",
    "description": "",
    "requestJWT": "",
    "requester": "",
  },
  "activeCredentialRequest": undefined,
  "activePaymentRequest": Object {
    "amount": 0,
    "callbackURL": "",
    "description": "",
    "paymentRequest": "",
    "receiver": Object {
      "address": "",
      "did": "",
    },
  },
  "deepLinkLoading": false,
}
`;

exports[`sso reducer should handle the SET_CREDENTIAL_REQUEST action  1`] = `
Object {
  "activeAuthenticationRequest": Object {
    "callbackURL": "",
    "description": "",
    "requestJWT": "",
    "requester": "",
  },
  "activeCredentialRequest": Object {
    "callbackUrl": "http://example.com/myendpoint/",
    "request": Array [
      Object {
        "constraints": Array [],
        "type": Array [
          "Credential",
          "ProofOfEmailCredential",
        ],
      },
    ],
    "requester": "did:jolo:mock",
  },
  "activePaymentRequest": Object {
    "amount": 0,
    "callbackURL": "",
    "description": "",
    "paymentRequest": "",
    "receiver": Object {
      "address": "",
      "did": "",
    },
  },
  "deepLinkLoading": false,
}
`;

exports[`sso reducer should initialize correctly 1`] = `
Object {
  "activeAuthenticationRequest": Object {
    "callbackURL": "",
    "description": "",
    "requestJWT": "",
    "requester": "",
  },
  "activeCredentialRequest": Object {
    "availableCredentials": Array [],
    "callbackURL": "",
    "requestJWT": "",
    "requester": Object {
      "did": "",
    },
  },
  "activePaymentRequest": Object {
    "amount": 0,
    "callbackURL": "",
    "description": "",
    "paymentRequest": "",
    "receiver": Object {
      "address": "",
      "did": "",
    },
  },
  "deepLinkLoading": false,
}
`;
